--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,6 +18,36 @@
             <h1><strong><%= name %></strong></h1>
             <a href="login" class="a-login">Ir a loguearse</a>
             <% } %>
+            <br>
+            <h1>Donde quieres parchar primero?</h1>
+            
+            <button id="type" onclick="redireccion_filter1('pagina1.html')">Ir a comer</button>
+            <button id="typee" onclick="redireccion_filter123('beber')">Ir a beber</button>
+
+
+
+<script>
+    //FUNCTION PARA ENVIAR AL SIGUIENTE FILTRO AL OPRIMIR BOTON
+    function redireccion_filter1(url) {
+        window.location.href = url;
+    }
+
+    //FILTRAR TABLA
+    function redireccion_filter123() {
+        const type = document.getElementById("type").value;
+
+        //SOLICITUD AL SERVER PARA OBTENER RESULTADOS
+        fetch('/filtrar?type=${type}', {method: 'GET'})
+        .then(response => {
+        console.log(response);
+        return response.json();
+        })
+        .then(data => {
+            console.log(data);
+        })
+        .catch(error => console.error('Error al realizar la soli:', error));
+    }
+</script>
     
 </body>
 </html>
